# wiki-recall

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  expert-review-final.md  final-audit-v2.md  final-audit.md  package.json  pyproject.toml  tsconfig.json
.a2a-crews/: .planner-prompt.txt  plan.json
.obsidian/: app.json  appearance.json  core-plugins.json  graph.json
benchmarks/: generators.ts  metrics.ts  reporter.ts  runner.ts  token-benchmark.md  types.ts
docs/: architecture.md  getting-started.md  obsidian-setup.md
engine/: __main__.py  dream.py  harvest.py  heal.py  hygiene.py  indexer.py  llm_client.py  llm_filter.py  mcp_server.py  mock_llm.py  page_quality.py  refactor.py  retrofit.py  sanitize.py  search.py  validate_paths.py
examples/: identity.yaml
protocols/: dream-protocol.md  heal-protocol.md  interview-protocol.md  retrofit-protocol.md
reference/: hard-gates.md  multi-agent-rules.md  session-workflow.md
schemas/: knowledge-entity.schema.json  scenario.schema.json
scripts/: backup.ps1  compact.ps1  harvest.ps1  hygiene.ps1  interview-protocol.md  lint.ps1  maintenance.ps1  refresh.ps1  setup-cron.sh  setup-scheduler.ps1  setup.ps1
src/: config.ts  logger.ts  types.ts
templates/: RESOLVER.md  actions.md  brain.md  copilot-instructions.md  decisions.md  domain-template.md  frontend-app.yaml  grain-gitignore  infra-pipeline.yaml  multi-agent.yaml  people-readme.md  people-template.md  persona.md  project-template.md  research-paper.yaml  web-api.yaml  wiki-index.md
(+125 files in other folders)
